Revert "OPE-1058 change metrics and probes endpoint (#691)"
This reverts commit deb83e64